# noctalia-qs

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  default.nix  flake.nix
src/: CMakeLists.txt
src/bluetooth/: CMakeLists.txt
src/core/: CMakeLists.txt  generation.cpp  logging.cpp  model.hpp  region.cpp  region.hpp
src/core/test/: objectmodel.cpp
src/crash/: CMakeLists.txt
src/dbus/dbusmenu/: CMakeLists.txt
src/debug/: CMakeLists.txt
src/io/: CMakeLists.txt  fileview.cpp
src/ipc/: CMakeLists.txt
src/launch/: CMakeLists.txt  command.cpp  launch.cpp  launch_p.hpp  main.cpp  parsecommand.cpp
src/network/: CMakeLists.txt
src/network/nm/: backend.cpp  connection.cpp  utils.cpp  wireless.cpp
src/services/greetd/: CMakeLists.txt
src/services/mpris/: CMakeLists.txt
src/services/notifications/: CMakeLists.txt
src/services/pam/: CMakeLists.txt
src/services/pipewire/: CMakeLists.txt  spectrum.cpp  spectrum.hpp
src/services/polkit/: CMakeLists.txt
src/services/status_notifier/: CMakeLists.txt
src/services/upower/: CMakeLists.txt
src/ui/: CMakeLists.txt
src/wayland/: CMakeLists.txt  popupanchor.cpp  session_lock.cpp
src/wayland/background_effect/: CMakeLists.txt  background_blur.cpp  background_blur.hpp  manager.cpp  qml.cpp  qml.hpp  surface.cpp  surface.hpp
src/wayland/buffer/: dmabuf.cpp
src/wayland/hyprland/: CMakeLists.txt
src/wayland/idle_inhibit/: CMakeLists.txt
src/wayland/idle_notify/: CMakeLists.txt
src/wayland/screencopy/: CMakeLists.txt
src/widgets/: CMakeLists.txt
src/window/: CMakeLists.txt  proxywindow.cpp  proxywindow.hpp
src/x11/: CMakeLists.txt
(+18 files in other folders)
